examples/should_fail/static_sync_bad.anvil
chan ch {
    left req: (logic[8]@#1) @#3-@#3
}

proc slave(ep : left ch) {
    loop {
        let r = recv ep.req >>
        dprint "Value = %d" (r);
        cycle 3
    }
}

proc static_sync() {
    chan le -- ri : ch;
    spawn slave(le);
    reg r : logic[8];

    loop {
        send ri.req(*r) >>
        set r := *r + 8'd1
    }
}

